# my_django_project

./: db.sqlite3  pyproject.toml
my_django_project/: settings.py  urls.py
siteSpider/: apps.py  serializers.py  urls.py  views.py
siteSpider/migrations/: 0001_initial.py
